force-app/main/default/objects/LogSistema__c/LogSistema__c.object-meta.xml
<CustomObject>
    <description>Usado para salvar logs</description>
    <label>Log do Sistema</label>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Número do Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs do Sistema</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>