force-app/main/default/objects/LogSistema__c/fields/IdObjeto__c.field-meta.xml
<CustomField>
    <fullName>IdObjeto__c</fullName>
    <description>Id do objeto processado</description>
    <externalId>true</externalId>
    <label>Id do Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>