force-app/main/default/objects/LogSistema__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Mensagem explicativa</description>
    <inlineHelpText>Mensagem explicativa</inlineHelpText>
    <label>Mensagem</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>