force-app/main/default/objects/LogSistema__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>