force-app/main/default/objects/LogSistema__c/fields/Reprocessado__c.field-meta.xml
<CustomField>
    <fullName>Reprocessado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informar se o registro já foi reprocessado!</description>
    <label>Reprocessado</label>
    <type>Checkbox</type>
</CustomField>