force-app/main/default/objects/LogSistema__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Informar o status do log</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Falha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>