force-app/main/default/objects/LogSistema__c/fields/Trabalho__c.field-meta.xml
<CustomField>
    <fullName>Trabalho__c</fullName>
    <description>Trabalho que gerou o log</description>
    <inlineHelpText>Trabalho que gerou o log</inlineHelpText>
    <label>Trabalho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>