force-app/main/default/objects/LogSistema__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IdObjeto__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Objeto__c</columns>
    <columns>Status__c</columns>
    <columns>Trabalho__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>